feat: new oath
